Modify birthday invitation details
Updated event details including date, time, and venue.

--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
   <div class="container">
     <h1 class="animated-h1">🎉 You're Invited! 🎉</h1>
     <p class="subhead animated-p">To Arnav's Awesome Birthday Bash<br>
-      <span>Date:</span> 5th October 2025<br>
-      <span>Venue:</span> 123 Party Lane, Fun City
+      <span>Date:</span> 3rd October 2025<br><br>
+      <span>Time:</span> 4:30 PM onwards<br><br>
+      <span>Venue:</span>Mironi – A Culinary Affair, 3rd Floor, Manish Twin Plaza, Plot No 2, Sector 4, Dwarka, New Delhi, Delhi, 110075
     </p>
     <div class="cake"></div>
     <form id="rsvp-form" class="animated-form">
       <h2>RSVP Here</h2>
       <input type="text" id="name" placeholder="Your Name" required>
-      <input type="tel" id="phone" placeholder="Phone Number" required>
-      <input type="text" id="song" placeholder="Song Request? (Optional)"> <!-- Song Request Field -->
+      <input type="tel" id="phone" placeholder="Parent Phone Number" required>
+      <input type="text" id="song" placeholder="Song Request? (Optional)">
       <input type="text" id="msg" placeholder="Message (optional)">
       <button type="submit" class="rsvp-btn">I'm Coming! 🎈</button>
       <div id="status"></div>
