Modify RSVP time and venue details
Updated the RSVP details including time and venue.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <h1 class="animated-h1">🎉 You're Invited! 🎉</h1>
     <p class="subhead animated-p">To Arnav's Awesome Birthday Bash<br>
       <span>Date:</span> 3rd October 2025<br><br>
-      <span>Time:</span> 4:30 PM onwards<br><br>
-      <span>Venue:</span>Mironi – A Culinary Affair, 3rd Floor, Manish Twin Plaza, Plot No 2, Sector 4, Dwarka, New Delhi, Delhi, 110075
+      <span>Time:</span> 5:30 PM onwards<br><br>
+      <span>Venue:</span> Courtyard Revibe - Cafe & Restaurant | Dwarka, Plot No. 9, Pocket C, Sector 17 Dwarka, Dwarka, Delhi, 110078
     </p>
     <div class="cake"></div>
     <form id="rsvp-form" class="animated-form">
@@ -52,3 +52,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
